Avoid title to be hidden under the cart buttons, on tablet

--- a/src/resources/sass/components/_cart-icon.scss
+++ b/src/resources/sass/components/_cart-icon.scss
@@ -127,7 +127,7 @@ a.product-cart__item {
 }
 
 .product-cart + .block {
-	@media screen and (min-width: $screen-sm + 1) and (max-width: $screen-sm-max){
+	@media screen and (min-width: $screen-sm) and (max-width: $screen-sm-max){
 		margin-top: 45px;
 	}
 }
